[package]
name = "mockchain_v2" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2021"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
hex = "0.4.3"
lazy_static = "1.5.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand_core = "0.6.4"
rs_merkle = "1.4.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
text_io = "0.1.12"
